--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="app" class="container mx-auto p-4 sm:p-6 lg:p-8">
         
         <header class="text-center mb-8">
-            <h1 class="text-3xl md:text-4xl font-bold text-slate-900">Hi Steven & Sam <p>&#128075;</p>
+            <h1 class="text-3xl md:text-4xl font-bold text-slate-900">Market Research Report<p>&#128075;</p>
 </h1>
             <p class="text-lg text-slate-600 mt-2">Multi-Platform Content Uploading Solutions</p>
         </header>
